<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ai"
    >

    <Button
        android:id="@+id/a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="12%"
        app:layout_widthPercent="25%"
        android:background="@drawable/bt3"
        android:text="@string/xingming"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="12%"
        app:layout_widthPercent="25%"
        app:layout_marginLeftPercent="25%"
        android:background="@drawable/bt3"
        android:text="@string/dengji"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="12%"
        app:layout_widthPercent="25%"
        app:layout_marginLeftPercent="75%"
        android:background="@drawable/bt3"
        />
    <Button
        android:id="@+id/d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="15%"
        app:layout_marginTopPercent="20%"
        app:layout_marginLeftPercent="60%"
        android:background="@drawable/bt3"
        android:text="@string/gonghui"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="30%"
        app:layout_marginTopPercent="45%"
        app:layout_marginLeftPercent="65%"
        android:background="@drawable/bt3"
        android:text="@string/huodong"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="20%"
        app:layout_marginTopPercent="55%"
        app:layout_marginLeftPercent="30%"
        android:background="@drawable/bt3"
        android:text="@string/jiaoliu"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/g"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="75%"
        app:layout_marginLeftPercent="65%"
        android:background="@drawable/bt3"
        android:text="@string/zhaohuan"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/h"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="15%"
        app:layout_marginTopPercent="80%"
        app:layout_marginLeftPercent="5%"
        android:background="@drawable/bt3"
        android:text="@string/chuxun"
        android:textSize="15sp"
        android:textStyle="bold"
        />

</android.support.percent.PercentRelativeLayout>
