<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <Button
        android:id="@+id/a1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="10%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/bt3"
        android:text="@string/wupin"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/a2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="10%"
        app:layout_marginLeftPercent="55%"
        android:background="@drawable/bt3"
        android:text="@string/yongbing"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/a3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="35%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/bt3"
        android:text="@string/xunlian"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/a4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="35%"
        app:layout_marginLeftPercent="55%"
        android:background="@drawable/bt3"
        android:text="@string/zhuanzhi"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/a6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="60%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/bt3"
        android:text="@string/wuqi"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/a8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="60%"
        app:layout_marginLeftPercent="55%"
        android:background="@drawable/bt3"
        android:text="@string/jiaoliu"
        android:textSize="35sp"
        android:textStyle="bold"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/a9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="12%"
        app:layout_marginTopPercent="85%"
        app:layout_marginLeftPercent="85%"
        android:background="@drawable/btr2"
        android:text="@string/hongmoguan"
        android:textSize="15sp"
        android:textStyle="bold"
        />
</android.support.percent.PercentRelativeLayout>