<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <Button
        android:id="@+id/c1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="15%"
        app:layout_marginTopPercent="10%"
        app:layout_marginLeftPercent="10%"
        android:background="@drawable/btr1"
        android:text="@string/hongmoguan"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/c2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="25%"
        app:layout_widthPercent="20%"
        app:layout_marginTopPercent="30%"
        app:layout_marginLeftPercent="35%"
        android:background="@drawable/btr1"
        android:text="@string/jiahu"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/c3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="25%"
        app:layout_marginTopPercent="15%"
        app:layout_marginLeftPercent="65%"
        android:background="@drawable/btr1"
        android:text="@string/paihang"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/c4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="15%"
        app:layout_marginTopPercent="65%"
        app:layout_marginLeftPercent="15%"
        android:background="@drawable/btr1"
        android:text="@string/haoyou"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/c5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="25%"
        app:layout_widthPercent="30%"
        app:layout_marginTopPercent="65%"
        app:layout_marginLeftPercent="60%"
        android:background="@drawable/btr1"
        android:text="@string/kejin"
        android:textSize="15sp"
        android:textStyle="bold"
        />

</android.support.percent.PercentRelativeLayout>